<resources>
    <string name="app_name">Downloading App</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">View Download Progress</string>
    <string name="notification_channel_id">repo_channel</string>
    <string name="notification_channel_name">repoLoad</string>

    <string name="button_name">Click me</string>
    <string name="title_activity_detail">Loading Details Activity</string>

    <!--   main content-->
    <string name="glide">Glide - Image Loading Library by BumpTech</string>
    <string name="loadapp">LoadApp - Current repository by Udacity</string>
    <string name="retrofit">Retrofit - Type-safe HTTP client for Android &amp; Java by Square, Inc</string>
    <string name="select_download">select a download</string>
    <string name="no_found_text">not found</string>
    <string name="successful">SUCCESSFUL</string>
    <string name="running">RUNNING</string>
    <string name="pending">PENDING</string>
    <string name="paused">PAUSED</string>
    <string name="failed">FAILED</string>
    <string name="button_loading">We Are Loading</string>
    <string name="download">Download</string>
    <string name="ok">OK</string>
    <string name="file_name">File Name:</string>
    <string name="file_progress">File Progress:</string>
    <string name="place_holder">place holder</string>
    <string name="download_page_icon">Download Page Icon</string>
    <string name="loading_epi">Loading..</string>
</resources>
