<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/motionLayout"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    app:layoutDescription="@xml/content_detail_scene"
    tools:showIn="@layout/activity_detail">

    <Button
        android:id="@+id/button"
        android:layout_width="@dimen/insets_zero"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/insets_16"
        android:layout_marginEnd="@dimen/insets_16"
        android:layout_marginBottom="@dimen/insets_16"
        android:background="@color/colorPrimary"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_detail_fileName"
        android:layout_width="@dimen/insets_zero"
        android:layout_height="wrap_content"
        android:text="@string/place_holder"
        android:textSize="@dimen/default_text_size" />

    <TextView
        android:id="@+id/textView_detail_status"
        android:layout_width="@dimen/insets_zero"
        android:layout_height="wrap_content"
        android:text="@string/place_holder"
        android:textSize="@dimen/default_text_size" />

    <TextView
        android:id="@+id/textView_detail_nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_name"
        android:textSize="@dimen/default_text_size" />

    <TextView
        android:id="@+id/textView_detail_statusLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_progress"
        android:textSize="@dimen/default_text_size" />
</androidx.constraintlayout.motion.widget.MotionLayout>