<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/download"
            android:contentDescription="@string/download_page_icon" />
    </FrameLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="@dimen/insets_zero"
        android:layout_height="@dimen/insets_zero"
        android:layout_marginTop="@dimen/insets_64"
        android:layout_marginBottom="@dimen/insets_64"
        app:layout_constraintBottom_toTopOf="@+id/custom_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <RadioButton
            android:id="@+id/radioButton_main_glide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/insets_16"
            android:text="@string/glide"
            android:textSize="@dimen/default_text_size" />

        <RadioButton
            android:id="@+id/radioButton_main_loadApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/insets_16"
            android:text="@string/loadapp"
            android:textSize="@dimen/default_text_size" />

        <RadioButton
            android:id="@+id/radioButton_main_retrofit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/insets_16"
            android:text="@string/retrofit"
            android:textSize="@dimen/default_text_size" />
    </RadioGroup>

    <com.udacity.DownloadLoadingButton
        android:id="@+id/custom_button"
        android:layout_width="@dimen/insets_zero"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        app:backgroundColor="@color/colorPrimary"
        app:textColor="@color/white"
        app:textSize="@dimen/default_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>